--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta content="en-in" http-equiv="Content-Language">
 	<title>Minegod2012 on the internet</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
