--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
         <div class="butdisc"><button style="height: 80px; width:530px">Minegod2012#2859</button></a></div>
 
+<p style="color:white">10+ hours of my time wasted in this shit yayy...</p>
+
 </section>
   
 </body>
