--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="butdisc"><button style="height: 80px; width:530px">Minegod2012#2859</button></a></div>
 
-<p style="color:white">10+ hours of my time wasted in this shit yayy...</p>
+<p style="color:white">10+ hours of my life wasted on?/in? IDK this shit yayy...</p>
 
 </section>
   
