--- a/index.html
+++ b/index.html
@@ -2,53 +2,59 @@
 <html>
 
 <head>
-	<meta content="en-in" http-equiv="Content-Language">
-	<title>Minegod2012 on the internet</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style.css">
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+<link rel="icon" type="image/png" href="icon.png">
+<link rel="stylesheet" type="text/css" href="Home.css">
+<title>Home - Minegod2012</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Minegod2012, Minecraft, Minecraft resource packs">
+<meta name="description" content="idk homepage????">
+<meta name="author" content="Minegod2012">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap" rel="stylesheet">
-<base href="youtube.com" target="_blank">
-<style>
-        a{text-align: center;}
-    </style>
-
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&display=swap">
 </head>
 
-<body style="background-color:#0b002e">
+<body>
+   
+<header>
 
-	<div id="progressbar"></div>
-  <div id="scrollpath"></div>
-  
-  <section>
+    <div class="container">
 
+        <img src="albert instin.png" style="width: 342px; height: 125px" class="albert image">
 
-  
+    <nav>
 
-  </section>
-  
-  <section>  <!--website-->
+<ul>
 
-<i><u><h1 id="top title" style="color:#3302f7; font-size:50px; font-family: 'Oswald', sans-serif; text-align: center; margin:25px">Follow me on the Internet!</h1></u></i>
+<li><a href="youtube.com">Custom Resource Packs</a></li>
+<li><a href="youtube.com">All of my Links</a></li>
+<li><a href="youtube.com">Contact Me</a></li>
 
-<div class="butYou"><a href="https://www.youtube.com/channel/UCOdaGBQL_Lzo_xKstIC2OnA"><button style="height: 80px; width:235px">Youtube</button></a></div>
+</ul>
 
-  <div class="butWeb"><a href="https://minegod2012com.minegod2012.repl.co"><button style="height: 80px; width:310px">My Website</button></a></div>
+    </nav>
 
-    <div class="butInsta"><a href="https://www.instagram.com/minegod2012/"><button style="height: 80px; width:290px">Instagram</button></a></div>
-  
-      <div class="butCancel"><a href="https://twitter.com/Minegod2012"><button style="height: 80px; width:200px">Twitter</button></a></div>
+    </div>
 
-        <div class="butdisc"><button style="height: 80px; width:530px">Minegod2012#2859</button></a></div>
+</header>
 
-<p style="color:white">10+ hours of my life wasted on?/in? IDK this shit yayy...</p>
+<div class="about">
 
-</section>
-  
-</body>
+    <table>
+
+        <td class="image"><img alt="home image" src="home.png" style="width: 300px; height: 300px; float:left"></td>
+        <td class="tehdeh"><p>this is a test </p></td>
+
+    </table>
+
+</div>
+
+</body>  
+
+<video id="background" autoplay loop muted>
+    <source src="Untitled.mp4" type="video/mp4">
+    </video>
 
 </html>
-
-
-<!--Aight its me Minegod2012 signing off-->
