--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <ul>
 
 <li><a href="youtube.com">Custom Resource Packs</a></li>
-<li><a href="youtube.com">All of my Links</a></li>
+<li><a href="https://minegod2012.github.io/links/links.html">All of my Links</a></li>
 <li><a href="youtube.com">Contact Me</a></li>
 
 </ul>
