--- a/links/links.html
+++ b/links/links.html
@@ -33,9 +33,9 @@
 
 <div class="butYou"><a href="https://www.youtube.com/channel/UCOdaGBQL_Lzo_xKstIC2OnA"><button style="height: 80px; width:235px">Youtube</button></a></div>
 
-  <div class="butWeb"><a href="https://minegod2012com.minegod2012.repl.co"><button style="height: 80px; width:310px">My Website</button></a></div>
+  <div class="butWeb"><a href="https://minegod2012.github.io"><button style="height: 80px; width:310px">My Website</button></a></div>
 
-  <div class="butEmail"><a href="mailto:minegod2012@gmail.com?subject=ik you're probably wondering why tf do I have email over here but umm my discord tag keeps changing and i can't access my insta account"><button style="height: 80px; width:700px">minegod2012@gmail.com</button></a></div>
+  <div class="butEmail"><a href="mailto:minegod2012@gmail.com"><button style="height: 80px; width:700px">minegod2012@gmail.com</button></a></div>
   
       <div class="butCancel"><a href="https://twitter.com/Minegod2012"><button style="height: 80px; width:200px">Twitter</button></a></div>
 
