--- a/links/links.html
+++ b/links/links.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap" rel="stylesheet">
-<base href="youtube.com" target="_blank">
+<base href="youtube.com" target="_self">
 <style>
         a{text-align: center;}
     </style>
