--- a/links/links.html
+++ b/links/links.html
@@ -8,7 +8,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital@1&display=swap" rel="stylesheet">
-<base href="youtube.com" target="_self">
 <style>
         a{text-align: center;}
     </style>
@@ -31,13 +30,13 @@
 
 <i><u><h1 id="top title" style="color:#3302f7; font-size:50px; font-family: 'Oswald', sans-serif; text-align: center; margin:25px">Follow me on the Internet!</h1></u></i>
 
-<div class="butYou"><a href="https://www.youtube.com/channel/UCOdaGBQL_Lzo_xKstIC2OnA"><button style="height: 80px; width:235px">Youtube</button></a></div>
+<div class="butYou"><a href="https://www.youtube.com/channel/UCOdaGBQL_Lzo_xKstIC2OnA" target="_blank"><button style="height: 80px; width:235px">Youtube</button></a></div>
 
-  <div class="butWeb"><a href="https://minegod2012.github.io"><button style="height: 80px; width:310px">My Website</button></a></div>
+  <div class="butWeb"><a href="https://minegod2012.github.io" target="_self"><button style="height: 80px; width:310px">My Website</button></a></div>
 
-  <div class="butEmail"><a href="mailto:minegod2012@gmail.com"><button style="height: 80px; width:700px">minegod2012@gmail.com</button></a></div>
+  <div class="butEmail"><a href="mailto:minegod2012@gmail.com" target="_blank"><button style="height: 80px; width:700px">minegod2012@gmail.com</button></a></div>
   
-      <div class="butCancel"><a href="https://twitter.com/Minegod2012"><button style="height: 80px; width:200px">Twitter</button></a></div>
+      <div class="butCancel"><a href="https://twitter.com/Minegod2012" target="_blank"><button style="height: 80px; width:200px">Twitter</button></a></div>
 
         <!-- <div class="butdisc"><button style="height: 80px; width:530px"> My disc tag keeps changing umm yeh</button></a></div> -->
 
