--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <ul>
 
-<li><a href="youtube.com">Custom Resource Packs</a></li>
+<li><a href="https://minegod2012.github.io/packs/packs.html" target="_self">Custom Resource Packs</a></li>
 <li><a href="https://minegod2012.github.io/links/links.html" target="_self">All of my Links</a></li>
-<li><a href="youtube.com">Contact Me</a></li>
+<li><a href="https://minegod2012.github.io/contact_me/contact_me.html" target="_self">Contact Me</a></li>
 
 </ul>
 
