--- a/contact_me/contact_me dark.html
+++ b/contact_me/contact_me dark.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta content="en-in" http-equiv="Content-Language">
-  <title>Packs - Minegod2012</title>
+  <title>Contact Me - Minegod2012</title>
+	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" text="type/css" href="contact_me.css">
 </head>
 
@@ -31,7 +34,7 @@
 
 	<tr>
 		<td style="border: 0 solid #FFFFFF; text-align: center; padding-top:20px;">
-		<img alt="light theme" src="light theme.png" style="width: 200px; height: 240px"></td>
+			<a href="minegod2012.github.io/contact_me/contact_me light"><img alt="light theme" src="light theme.png" style="width: 200px; height: 240px"></a></td>
 	</tr>
 
 </table>
