--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <li><a href="https://minegod2012.github.io/packs/packs.html" target="_self">Custom Resource Packs</a></li>
 <li><a href="https://minegod2012.github.io/links/links.html" target="_self">All of my Links</a></li>
-<li><a href="https://minegod2012.github.io/contact_me/contact_me.html" target="_self">Contact Me</a></li>
+<li><a href="https://minegod2012.github.io/contact_me/contact_me dark.html" target="_self">Contact Me</a></li>
 
 </ul>
 
