--- a/contact_me/contact_me light.html
+++ b/contact_me/contact_me light.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta content="en-in" http-equiv="Content-Language">
-  <title>Packs - Minegod2012</title>
+  <title>Contact Me - Minegod2012</title>
   <link rel="stylesheet" text="type/css" href="contact_me.css">
   
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,7 @@
 
 	<tr>
 		<td style="border: 0 solid #FFFFFF; text-align: center; padding-top:20px;">
-		<img alt="dark theme" src="dark theme.png" style="width: 200px; height: 240px"></td>
+		<a href="minegod2012.github.io/contact_me/contact_me dark.html"><img alt="dark theme" src="dark theme.png" style="width: 200px; height: 240px"></td>
 	</tr>
 
 </table>
