--- a/contact_me/contact_me light.html
+++ b/contact_me/contact_me light.html
@@ -34,7 +34,7 @@
 
 	<tr>
 		<td style="border: 0 solid #FFFFFF; text-align: center; padding-top:20px;">
-		<a href="minegod2012.github.io/contact_me/contact_me dark.html"><img alt="dark theme" src="dark theme.png" style="width: 200px; height: 240px"></td>
+		<a href="minegod2012.github.io/contact_me/contact_me dark.html"><img alt="dark theme" src="dark theme.png" style="width: 200px; height: 240px"></a></td>
 	</tr>
 
 </table>
