--- a/packs/packs.html
+++ b/packs/packs.html
@@ -1,18 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title> Minegod2012.com </title>
+  <title>Packs - Minegod2012</title>
   <link rel="stylesheet" text="type/css" href="packs.css">
 </head>
 
 <body>
-<h1 style="text-align: center">&nbsp;</h1>
-<h1 style="text-align: center">&nbsp;</h1>
-<h1 style="text-align: center">&nbsp;</h1>
-<h1 style="text-align: center">&nbsp;</h1>
-<h1 style="text-align: center">&nbsp;</h1>
+
 <h1 style="text-align: center">still gotta work on this shit</h1>
+
+<a href="minegod2012.github.io"><img draggable="false" src="white home.png" class="home-image"></a>
 
 </body>
 
