--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container">
 
-        <img src="albert instin.png" style="width: 342px; height: 125px" class="albert image">
+        <img src="albert instin.png" draggable="false" style="width: 342px; height: 125px" class="albert image">
 
     <nav>
 
@@ -44,7 +44,7 @@
 
     <table>
 
-        <td class="image"><img alt="home image" src="home.png" style="width: 300px; height: 300px; float:left"></td>
+        <td class="image"><img alt="big pfp image" draggable="false" src="home.png" style="width: 300px; height: 300px; float:left"></td>
         <td class="tehdeh"><p>this is a test </p></td>
 
     </table>
