--- a/packs/packs.html
+++ b/packs/packs.html
@@ -10,7 +10,7 @@
 
 <h1 style="text-align: center">still gotta work on this shit</h1>
 
-<a href="minegod2012.github.io"><img draggable="false" src="white home.png" class="home-image"></a>
+<a href="https://minegod2012.github.io/"><img draggable="false" src="white home.png" class="home-image"></a>
 
 </body>
 
