--- a/contact_me/contact_me dark.html
+++ b/contact_me/contact_me dark.html
@@ -1,12 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta content="en-in" http-equiv="Content-Language">
-  <title>Contact Me - Minegod2012</title>
-	
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <title>Packs - Minegod2012</title>
   <link rel="stylesheet" text="type/css" href="contact_me.css">
 </head>
 
@@ -34,16 +31,16 @@
 
 	<tr>
 		<td style="border: 0 solid #FFFFFF; text-align: center; padding-top:20px;">
-			<a href="contact_me light.html"><img alt="light theme" src="light theme.png" style="width: 200px; height: 240px"></a></td>
+		<img alt="light theme" src="light theme.png" style="width: 200px; height: 240px"></td>
 	</tr>
 
 </table>
 
-</div>
 
+</div>
+<a href="https://minegod2012.github.io"><img draggable="false" src="white home.png" class="home-image"></a>
 </body>
 
 </html>
-
 
 
