--- a/contact_me/contact_me light.html
+++ b/contact_me/contact_me light.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta content="en-in" http-equiv="Content-Language">
-  <title>Contact Me - Minegod2012</title>
+  <title>Packs - Minegod2012</title>
   <link rel="stylesheet" text="type/css" href="contact_me.css">
   
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,16 +34,18 @@
 
 	<tr>
 		<td style="border: 0 solid #FFFFFF; text-align: center; padding-top:20px;">
-		<a href="contact_me dark.html"><img alt="dark theme" src="dark theme.png" style="width: 200px; height: 240px"></a></td>
+		<img alt="dark theme" src="dark theme.png" style="width: 200px; height: 240px"></td>
 	</tr>
 
 </table>
 
 </div>
 
+<a href="https://minegod2012.github.io"><img draggable="false" src="black home.png" class="home-image"></a>
 </body>
 
 </html>
+
 
 
 
