--- a/contact_me/contact_me dark.html
+++ b/contact_me/contact_me dark.html
@@ -31,7 +31,7 @@
 
 	<tr>
 		<td style="border: 0 solid #FFFFFF; text-align: center; padding-top:20px;">
-		<img alt="light theme" src="light theme.png" style="width: 200px; height: 240px"></td>
+		<a href="contact_me light.html"<img alt="light theme" src="light theme.png" style="width: 200px; height: 240px"></a></td>
 	</tr>
 
 </table>
