--- a/contact_me/contact_me dark.html
+++ b/contact_me/contact_me dark.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta content="en-in" http-equiv="Content-Language">
-  <title>Packs - Minegod2012</title>
+  <title>Contact Me - Minegod2012</title>
   <link rel="stylesheet" text="type/css" href="contact_me.css">
+	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body style="color: #FFFFFF; background-color: #000000">
