--- a/contact_me/contact_me light.html
+++ b/contact_me/contact_me light.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta content="en-in" http-equiv="Content-Language">
-  <title>Packs - Minegod2012</title>
+  <title>Contact Me - Minegod2012</title>
   <link rel="stylesheet" text="type/css" href="contact_me.css">
   
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
