--- a/packs/packs.html
+++ b/packs/packs.html
@@ -4,6 +4,9 @@
 <head>
   <title>Packs - Minegod2012</title>
   <link rel="stylesheet" text="type/css" href="packs.css">
+  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
