--- a/links/index.html
+++ b/links/index.html
@@ -31,7 +31,7 @@
 
 <i><u><h1 id="top title" style="color:#3302f7; font-size:50px; font-family: 'Oswald', sans-serif; text-align: center; margin:25px">Follow me on the Internet!</h1></u></i>
 
-<div class="butYou"><a href="https://www.youtube.com/channel/UCOdaGBQL_Lzo_xKstIC2OnA" target="_blank"><button style="height: 80px; width:235px">Youtube</button></a></div>
+<div class="butYou"><a href="https://www.youtube.com/@Minegod2012 " target="_blank"><button style="height: 80px; width:235px">Youtube</button></a></div>
 
   <div class="butWeb"><a href="https://minegod2012.github.io" target="_self"><button style="height: 80px; width:310px">My Website</button></a></div>
 
