--- a/links/index.html
+++ b/links/index.html
@@ -44,7 +44,7 @@
 
         <div class="divdisc"><a href="discord.html"><button class="butDisc">Minegod2012#1010</button></a></div> -->
 
-        <div><img src="discord.png" style="width: 200px;" class="discimg"></div>
+        <div><img src="discord.png" draggable="false" style="width: 200px;" class="discimg"></div>
 </section>
   
 </body>
