--- a/links/index.html
+++ b/links/index.html
@@ -42,7 +42,7 @@
   
       <div class="divTwit"><a href="https://twitter.com/Minegod2012"><button class="butTwit">Twitter</button></a></div>
 
-        <div class="divdisc"><a href="discord.html"><button class="butDisc">Minegod2012#1010</button></a></div> -->
+        <div class="divdisc"><a href="discord.html"><button class="butDisc">Minegod2012#1010</button></a></div>
 
         <div><img src="discord.png" draggable="false" style="width: 200px;" class="discimg"></div>
 </section>
