--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <link rel="icon" type="image/png" href="icon.png">
-<link rel="stylesheet" type="text/css" href="test.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>Home - Minegod2012</title>
 <meta name="keywords" content="Minegod2012, Minecraft, Minecraft resource packs">
 <meta name="description" content="idk homepage????">
