--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
 </div>
 
+<div class="hamburger">
+
+    <button class="CRP_mobile" onclick="window.location.href='https://minegod2012.github.io/packs/'">CUSTOM RESOURCE PACKS</button>
+    <button class="links_mobile" onclick="window.location.href='https://minegod2012.github.io/links/'">ALL OF MY LINKS</button>
+    <button class="contact_mobile" onclick="window.location.href='https://minegod2012.github.io/contact_me/contact_me%20dark.html'">CONTACT ME</button>
+
+</div>
+
 <div class="about">
 
     <table class="description">
